新增headless UI、刻插件Modal

--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "vitest:ui": "vitest --ui"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@headlessui/vue": "^1.7.12",
     "firebase": "^9.18.0",
     "pinia": "^2.0.33",
     "vue": "^3.2.47",
