--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tinymce": "^5.10.7",
     "tinymce-i18n": "^23.1.23",
     "vue": "^3.2.47",
+    "vue-loading-overlay": "6.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
