新增忽略git的檔案、未輸入標題前禁止送審

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,13 @@ lerna-debug.log*
 
 node_modules
 .github
+.firebase
+.vscode
 dist
 dist-ssr
 *.local
+.env.development
+.env.production
 
 # Editor directories and files
 .vscode/*
