--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tinymce/tinymce-vue": "^4.0.7",
     "firebase": "^9.18.0",
     "pinia": "^2.0.33",
+    "sweetalert2": "^11.7.12",
     "tinymce": "^5.10.7",
     "tinymce-i18n": "^23.1.23",
     "vue": "^3.2.47",
