調整插件頁面、登入畫面

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^9.18.0",
     "pinia": "^2.0.33",
     "sweetalert2": "^11.7.12",
+    "three": "^0.155.0",
     "tinymce": "^5.10.7",
     "tinymce-i18n": "^23.1.23",
     "vue": "^3.2.47",
